# Roo_rules_global

./: .gitmodules  README.md
rules/: .pre-commit-config.yaml  00.coding-standards.md  01.formatting-rules.md  02.project_structure.md  03.setup_protocal.md  04.environment.md  05.document_lifecycle.md  06.git.md  07.badges.md  CITATION.cff  setup_project.md  setup_python.md
rules-conda-forge/: rules.md
rules-orchestrator/: python.md  release.md
rules/templates/: pyproject.toml
